OTA specific changes. Improved.